/*
 * CDMlib - Cartesian Data Management library
 *
 * Copyright (c) 2013-2014 Advanced Institute for Computational Science, RIKEN.
 * All rights reserved.
 *
 */


REVISION HISTORY
================

------------------
2014-12-10
Replace FormatType with FileType in FCONV
FCONV内の変数名やメソッド名に含まれるFormatTypeをFileTypeに置き換えた。

------------------
2014-12-10
Edit class convMxM to convert plot3d non-uniform cartesian data
FCONVのM対Mデータ変換機能において、plot3d形式の不等間隔格子データも変換
できるようにした。現時点では、不等間隔格子で出力できるのはplot3d形式だけ。
また、クラスconvMxN内も一部編集した。

------------------
2014-12-08
Edit class convMxN to convert plot3d non-uniform cartesian data
FCONVのM対Nデータ変換機能において、plot3d形式の不等間隔格子データも変換
できるようにした。現時点では、不等間隔格子で出力できるのはplot3d形式だけ。

------------------
2014-12-03
Bug fix in class convMx1
クラスconvMx1内にあるif文内のバグ修正
outGc-0 >> outGc=0

------------------
2014-12-02
Bug fix about GuideCell in FCONV
FCONVの中にmasterのリビジョン"Bug fix DFI_Finfo.GuideCell"と同様のバグ
m_param->Get_OutputGuideCell() > 1
outGc > 1
があったので、1->0に訂正した。

------------------
2014-12-02
Add method WriteGridFile in method VoxelInit in class convMxN
クラスconvMxNのメソッドVoxelInitにおいて、PLOT3D形式出力の場合、
WriteGridFileを用いてxyzファイルを出力するようにした。
ライブラリの改修で、フィールドデータの出力と格子データの出力を
別々のメソッドに分離したため。

------------------
2014-12-02
Add check for SPH format in FCONV and add API GetDFIType and GetDFITypeString
FCONVで不等間隔格子のデータをSPH形式もしくはBOV形式に変換しようとしたとき、
エラーを返すようにした。また、等間隔格子でも変数の数が1か3以外の場合に
SPH形式に変換しようとしたとき、エラーを返すようにした。
この編集に伴い、DFI種別を取得するAPI関数GetDFIType、GetDFITypeStringを
追加した。また、マクロD_CDM_DFITYPE_NON_UNIFORM_CARTESIANを定義した。

------------------
2014-12-01
accept pull request #10

------------------
2014-11-29
Merge master into branch advance_develop
masterのリビジョン"accept pull request #9"をブランチadvance_developにマージした。
Plot3d対応で追加修正した部分を不等間隔格子対応に取り込むため。
その際、競合が発生したファイルが存在したので解決した。

------------------
2014-11-28
Minor correction about print statements in class cdm_NonUniformDomain
クラスcdm_NonUniformDomain内にあるprint文の訂正を行った。

------------------
2014-11-21