@@ -203,7 +203,7 @@ void convMxN::VoxelInit()
     //間引きありのとき、出力ガイドセルを0に設定
     if( thin_count > 1 ) outGc=0;
     //格子点出力のとき、出力ガイドセルを0に設定
-    if( m_bgrid_interp_flag ) outGc=0; 
+    if( m_param->Get_Interp_flag() ) outGc=0; 
 
     cdm_DFI *dfi = NULL;
     if( DFI_FInfo->DFIType == CDM::E_CDM_DFITYPE_CARTESIAN )
@@ -288,6 +288,18 @@ void convMxN::VoxelInit()
 
     //出力形式（ascii,binary,Fbinary)のセット
     dfi->set_output_type(m_param->Get_OutputFileType());
+
+    //節点への補間フラグのセット(AVSおよびVTK形式)
+    if( m_param->Get_OutputFormat() == CDM::E_CDM_FMT_AVS || 
+        m_param->Get_OutputFormat() == CDM::E_CDM_FMT_VTK ) {
+      dfi->set_interp_flag(m_param->Get_Interp_flag());
+    }
+
+    //座標データの出力形式のセット(AVSおよびVTK形式)
+    if( m_param->Get_OutputFormat() == CDM::E_CDM_FMT_AVS || 
+        m_param->Get_OutputFormat() == CDM::E_CDM_FMT_VTK ) {
+      dfi->set_output_type_coord(m_param->Get_OutputFileTypeCoord());
+    }
 
     //gridファイルを出力(PLOT3D形式，iblankはすべて1にセット)
     if (m_param->Get_OutputFormat() == CDM::E_CDM_FMT_PLOT3D) {
@@ -444,7 +456,7 @@ bool convMxN::exec()
     }
 
     if( thin_count > 1 ) outGc=0;
-    if( m_bgrid_interp_flag ) outGc=0; 
+    if( m_param->Get_Interp_flag() ) outGc=0; 
 
     //読込みバッファのインスタンス
     cdm_Array* buf = cdm_Array::instanceArray
